--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,63 @@
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 16px 8px 12px;
-  height: 40px;
-  background-color: #2c2c2c;
-  color: #e0e0e0;
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  max-width: 1327px;
+}
 
-  &__title {
-    text-align: center;
-    font-weight: bold;
-    font-size: 2em;
+.header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 23px;
   }
 }
+
+.social {
+  display: flex;
+  align-items: center;
+  padding-top: 21px;
+
+  &__item:not(:last-child) {
+    margin-right: 40px;
+  }
+
+  &__link {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    &_youtube {
+      background-image: url("../../assets/img/youtube.svg");
+    }
+
+    &_vk {
+      background-image: url("../../assets/img/vk.svg");
+    }
+
+    &_facebook {
+      background-image: url("../../assets/img/facebook.svg");
+    }
+
+    &_twitter {
+      background-image: url("../../assets/img/twitter.svg");
+    }
+
+    &_twitch {
+      background-image: url("../../assets/img/twitch.svg");
+    }
+
+    &_instagram {
+      background-image: url("../../assets/img/instagram.svg");
+    }
+  }
+}
+
